Adicionar validações para registrar vacinação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:carteiraVacinacaoDB
 spring.datasource.initialization-mode=always
+
+logging.level.io.schneider.carteira.vacinacao=DEBUG
